--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@number-flow/react": "^0.5.9",
     "@tailwindcss/vite": "^4.1.4",
     "lucide-react": "^0.503.0",
     "motion": "^12.7.4",
