--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,8 @@
 # per‑ip rate limits
-MAIN_RATE_LIMIT="100 per day"     # /process endpoint
-OTHER_RATE_LIMIT="500 per day"    # /health and any future misc endpoints
+# /process endpoint:
+MAIN_RATE_LIMIT=100 per day
+# /health and any future misc endpoints:
+OTHER_RATE_LIMIT=500 per day
 
 # optional: override service port
 # PORT=5040
